src/main/java/com/example/sqlvericek/Error/DateParseError/DateParseError.java
package com.example.sqlvericek.Error.DateParseError;

public class DateParseError {
}
